--- a/src/local-overrides.less
+++ b/src/local-overrides.less
@@ -161,8 +161,8 @@ body.flat.ttrss_utility {
       font-size: 16px;
     }
     // stretch submit button
-    form > fieldset:last-child :is(.dijitButton, .dijitButtonNode) {
-      display: block;
+    form > fieldset:last-child .dijitButton {
+      width: 100%;
     }
   }
 
